--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -571,13 +571,13 @@
 </div>
 
   <script type="module">
-    import { initializeLogoutFeature } from './src/js/logout.js';
+    import { initializeLogout } from './src/js/logout.js';
     import './src/js/buy-crypto-view.js';
     import './src/js/buy-crypto-interactive.js';
     import './src/js/portfolio-view.js';
     document.addEventListener('DOMContentLoaded', () => {
-      initializeLogoutFeature('logout-button-mobile', null);
-      initializeLogoutFeature('logout-button-desktop', null);
+      initializeLogout('logout-button-desktop');
+      initializeLogout('logout-button-mobile');
     });
   </script>
 </body>
