--- a/deposit.html
+++ b/deposit.html
@@ -487,5 +487,12 @@
   </script>
 
   <script type="module" src="/src/js/deposit.js"></script>
+  <script type="module">
+    import { initializeLogout } from './src/js/logout.js';
+    document.addEventListener('DOMContentLoaded', () => {
+      initializeLogout('logout-button-desktop');
+      initializeLogout('logout-button-mobile');
+    });
+  </script>
 </body>
 </html>
