--- a/transaction-history.html
+++ b/transaction-history.html
@@ -7,19 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            gray: { 900: '#111827' },
-            blue: { 400: '#60a5fa' }
-          }
-        }
-      }
-    }
-  </script>
+  <link rel="stylesheet" href="/src/styles/input.css">
+
   <style>
     body { font-family: 'IBM Plex Sans', sans-serif; }
     .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
