--- a/dashboard.html
+++ b/dashboard.html
@@ -3,27 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CT Rocket - Overview</title>
+  <title>CT Rocket - Dashboard</title>
+  <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            gray: {
-              900: '#111827',
-            },
-            blue: {
-              400: '#60a5fa',
-            }
-          }
-        }
-      }
-    }
-  </script>
   <style>
     body {
       font-family: 'IBM Plex Sans', sans-serif;
