--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=login.html">
-  <title>Redirecting...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CT Rocket</title>
+  <link rel="stylesheet" href="/src/styles/input.css">
+  <meta http-equiv="refresh" content="0; url=/login.html" />
 </head>
 <body>
-  <p>If you are not redirected automatically, follow this <a href="login.html">link to the login page</a>.</p>
+  <p>Loading...</p>
 </body>
 </html> 
