--- a/withdrawal.html
+++ b/withdrawal.html
@@ -4,30 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CT Rocket - Withdrawal</title>
+  <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!-- Add Supabase before any module scripts -->
-   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            gray: {
-              900: '#111827',
-            },
-            blue: {
-              400: '#60a5fa',
-            }
-          }
-        }
-      }
-    }
-  </script>
-  <!-- Import our CSS -->
-  <link rel="stylesheet" href="/src/styles/input.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <style>
     /* Custom styles that might not be in Tailwind */
     body {
@@ -579,7 +560,7 @@
                 <span id="reference-id" class="font-mono text-xs text-gray-300"></span>
               </div>
             </div>
-            <button id="close-success" class="w-full bg-blue-600 text-white py-3 px-4 rounded-md hover:bg-blue-700 transition-colors font-medium">
+            <button id="success-done-btn" class="w-full px-6 py-3.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors font-semibold">
               Done
             </button>
           </div>
@@ -641,11 +622,12 @@
 
   <script type="module">
     import { initializeLogout } from './src/js/logout.js';
-    import './src/js/withdrawal.js';
+    import { initializeWithdrawalPage } from './src/js/withdrawal.js';
     
     document.addEventListener('DOMContentLoaded', () => {
       initializeLogout('logout-button-desktop');
       initializeLogout('logout-button-mobile');
+      initializeWithdrawalPage();
     });
   </script>
 <script src="./src/js/header.js" type="module"></script>
