feat: initial commit

--- a/profile.html
+++ b/profile.html
@@ -277,14 +277,7 @@
                   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="md:col-span-2">
                       <label for="country" class="block text-sm font-medium text-white mb-2">Country</label>
-                      <select id="country" name="country" class="w-full border border-gray-600 bg-gray-700 text-white rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400">
-                        <option value="">Select country</option>
-                        <option value="us">United States</option>
-                        <option value="ca">Canada</option>
-                        <option value="uk">United Kingdom</option>
-                        <option value="au">Australia</option>
-                        <option value="other">Other</option>
-                      </select>
+                      <input type="text" id="country" name="country" class="w-full border border-gray-600 bg-gray-600 text-gray-400 rounded-md py-3 px-4 cursor-not-allowed" placeholder="Country not set" readonly>
                     </div>
                   </div>
                 </div>
