--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
             <div>
               <div class="flex items-center justify-between mb-2">
                 <label for="password" class="block text-sm font-medium text-gray-300">Password</label>
-                <a href="forgot-password.html" class="text-sm text-blue-400 hover:text-blue-300 transition-colors">Forgot?</a>
+                <a href="forgot-password.html" class="text-sm text-blue-400 hover:text-blue-300 transition-colors">Forgot Password?</a>
               </div>
               <div class="input-group">
                 <svg class="input-icon w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="11" x="3" y="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
