feat: initial commit

--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -553,9 +553,7 @@
 
   <script type="module">
     import { initializeLogout } from './src/js/logout.js';
-    import './src/js/buy-crypto-view.js';
-    import './src/js/buy-crypto-interactive.js';
-    import './src/js/portfolio-view.js';
+    import './src/js/buy-crypto.js';
     document.addEventListener('DOMContentLoaded', () => {
       initializeLogout('logout-button-desktop');
       initializeLogout('logout-button-mobile');
