--- a/withdrawal.html
+++ b/withdrawal.html
@@ -69,7 +69,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
                 <span class="font-medium text-sm">Withdrawal</span>
               </a>
-              <a href="transactions.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
+              <a href="transaction-history.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M12 7v5l4 2"/></svg>
                 <span class="text-sm">Transactions</span>
               </a>
@@ -83,7 +83,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                 <span class="text-sm">Profile</span>
               </a>
-              <a href="https://www.elitemf.net/contact-us" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
+              <a href="https://www.capirocket.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                 <span class="text-sm">Help & Support</span>
               </a>
@@ -153,7 +153,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                   <span class="text-sm">Profile</span>
                 </a>
-                <a href="https://www.elitemf.net/contact-us" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
+                <a href="https://www.capirocket.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                   <span class="text-sm">Help & Support</span>
                 </a>
