feat: initial commit

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -64,12 +64,12 @@
           </div>
           <form id="otp-form" class="space-y-6">
             <div class="flex justify-center gap-3">
-              <input type="text" class="otp-input" maxlength="1">
-              <input type="text" class="otp-input" maxlength="1">
-              <input type="text" class="otp-input" maxlength="1">
-              <input type="text" class="otp-input" maxlength="1">
-              <input type="text" class="otp-input" maxlength="1">
-              <input type="text" class="otp-input" maxlength="1">
+              <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
+              <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
+              <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
+              <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
+              <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
+              <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1">
             </div>
             <button type="submit" id="otp-submit-btn" class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors flex justify-center items-center disabled:bg-blue-400 disabled:cursor-not-allowed">
               <span class="btn-text">Verify Code</span>
