--- a/login.html
+++ b/login.html
@@ -107,12 +107,12 @@
           </div>
           <form id="otp-form" class="space-y-6">
             <div class="flex justify-center gap-3">
-                  <input type="text" class="otp-input" maxlength="1" data-index="0">
-                  <input type="text" class="otp-input" maxlength="1" data-index="1">
-                  <input type="text" class="otp-input" maxlength="1" data-index="2">
-                  <input type="text" class="otp-input" maxlength="1" data-index="3">
-                  <input type="text" class="otp-input" maxlength="1" data-index="4">
-                  <input type="text" class="otp-input" maxlength="1" data-index="5">
+                  <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1" data-index="0">
+                  <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1" data-index="1">
+                  <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1" data-index="2">
+                  <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1" data-index="3">
+                  <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1" data-index="4">
+                  <input type="text" inputmode="numeric" pattern="[0-9]*" class="otp-input" maxlength="1" data-index="5">
             </div>
             <div class="flex justify-end pt-2">
               <button type="submit" id="otp-submit-btn" class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors flex justify-center items-center disabled:bg-blue-400 disabled:cursor-not-allowed">
