feat: initial commit

--- a/locked-savings.html
+++ b/locked-savings.html
@@ -4,7 +4,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CapiRocket - Locked Savings</title>
+  <title>CapiRocket - Time Deposits</title>
   <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,10 +80,10 @@
               </a>
               <a href="buy-crypto.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2"/><path d="M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21"/></svg>
-                <span class="text-sm">Buy Crypto</span>
+                <span class="text-sm">Invest In</span>
               </a>
               <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-blue-400 bg-gray-700 rounded-lg border-l-4 border-blue-400">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                <span class="font-medium text-sm">Locked Savings</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                <span class="font-medium text-sm">Time Deposits</span>
               </a>
               <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
@@ -150,10 +150,10 @@
                 </a>
                 <a href="buy-crypto.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2"/><path d="M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21"/></svg>
-                  <span class="text-sm">Buy Crypto</span>
+                  <span class="text-sm">Invest In</span>
                 </a>
                 <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-blue-400 bg-gray-700 rounded-lg border-l-4 border-blue-400">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                  <span class="font-medium text-sm">Locked Savings</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                  <span class="font-medium text-sm">Time Deposits</span>
                 </a>
                 <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-white hover:bg-gray-700 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
@@ -204,7 +204,7 @@
             </button>
 
             <div>
-              <h1 class="text-xl sm:text-2xl font-bold text-white">Locked Savings</h1>
+              <h1 class="text-xl sm:text-2xl font-bold text-white">Time Deposits</h1>
               <p class="text-gray-300 mt-1 text-sm sm:text-base hidden sm:block">
                 Secure your savings with guaranteed returns
               </p>
@@ -322,11 +322,11 @@
             </div>
           </div>
 
-          <!-- Active Locked Savings -->
+          <!-- Active Time Deposits -->
           <div class="bg-gray-800 rounded-2xl shadow-sm overflow-hidden">
             <div class="p-6 lg:p-8 flex items-center justify-between border-b border-gray-700">
               <div>
-                <h3 class="text-xl font-semibold text-white">Active Locked Savings</h3>
+                <h3 class="text-xl font-semibold text-white">Active Time Deposits</h3>
                 <p class="text-gray-400 mt-1 text-sm">Manage your current investments</p>
               </div>
               <div class="flex items-center gap-2">
@@ -350,14 +350,14 @@
                 <tbody id="active-deposits-tbody">
                   <tr>
                     <td colspan="7" class="px-6 py-8 text-center text-gray-400">
-                      Loading Locked Savings...
+                      Loading Time Deposits...
                     </td>
                   </tr>
                 </tbody>
               </table>
               <div id="active-deposits-cards" class="lg:hidden space-y-4">
                   <div class="px-6 py-8 text-center text-gray-400">
-                      Loading Locked Savings...
+                      Loading Time Deposits...
                   </div>
               </div>
             </div>
@@ -457,8 +457,8 @@
           </svg>
         </div>
         
-        <h3 class="text-lg sm:text-xl font-bold text-white mb-2">Processing Locked Savings</h3>
-        <p class="text-gray-400 mb-4 text-sm sm:text-base">Please wait while we set up your Locked Savings...</p>
+        <h3 class="text-lg sm:text-xl font-bold text-white mb-2">Processing Time Deposits</h3>
+        <p class="text-gray-400 mb-4 text-sm sm:text-base">Please wait while we set up your Time Deposits...</p>
         
         <!-- Progress bar -->
         <div class="w-full bg-gray-700 rounded-full h-2 mb-3">
@@ -474,15 +474,15 @@
   <div id="success-modal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
     <div class="bg-gray-800 rounded-lg shadow-lg w-full max-w-md mx-4 overflow-hidden border border-gray-700">
       <div class="p-4 sm:p-6 border-b border-gray-700">
-        <h3 class="text-lg sm:text-xl font-medium text-white">Locked Savings Created</h3>
+        <h3 class="text-lg sm:text-xl font-medium text-white">Time Deposits Created</h3>
       </div>
       <div class="p-6">
         <div class="flex flex-col items-center justify-center py-6">
           <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center text-green-600 mb-4">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
           </div>
-          <h4 class="text-lg font-medium text-white mb-2">Locked Savings Created Successfully</h4>
-          <p class="text-gray-400 text-center mb-6">Your Locked Savings has been created and will start earning interest immediately.</p>
+          <h4 class="text-lg font-medium text-white mb-2">Time Deposits Created Successfully</h4>
+          <p class="text-gray-400 text-center mb-6">Your Time Deposits has been created and will start earning interest immediately.</p>
           <div class="bg-gray-700 rounded-md p-4 w-full space-y-2 mb-6">
             <div class="flex justify-between">
               <span class="text-sm text-gray-400">FD Number:</span>
@@ -524,8 +524,8 @@
           <div class="w-16 h-16 bg-red-100 rounded-full flex items-center justify-center text-red-600 mb-4">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
           </div>
-          <h4 class="text-lg font-medium text-white mb-2">Unable to Create Locked Savings</h4>
-          <p class="text-gray-400 text-center mb-6">You don't have sufficient balance in your wallet to create this Locked Savings.</p>
+          <h4 class="text-lg font-medium text-white mb-2">Unable to Create Time Deposits</h4>
+          <p class="text-gray-400 text-center mb-6">You don't have sufficient balance in your wallet to create this Time Deposits.</p>
           <div class="bg-gray-700 rounded-md p-4 w-full space-y-2 mb-6">
             <div class="flex justify-between">
               <span class="text-sm text-gray-400">Required Amount:</span>
@@ -569,7 +569,7 @@
           </div>
           <h4 class="text-lg font-medium text-white mb-2 text-center">Review Early Closure Details</h4>
           <p class="text-gray-400 text-center mb-6">
-            You are about to close your Locked Savings before its maturity date.
+            You are about to close your Time Deposits before its maturity date.
             A penalty will be applied to the interest earned.
           </p>
 
