--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -271,7 +271,7 @@
           <!-- Available Funds -->
           <div class="bg-gray-800 rounded-2xl p-6 lg:p-8 shadow-sm mb-8">
             <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 mb-6">
-              <h2 class="text-xl font-semibold text-white">Available Cryptos</h2>
+              <h2 class="text-xl font-semibold text-white">Available Tokens</h2>
               <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
                 <select class="bg-gray-700 border border-gray-600 text-white rounded-md py-2 px-4 text-sm focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400 w-full sm:w-auto">
                   <option value="">Interest Rate</option>
