--- a/dashboard.html
+++ b/dashboard.html
@@ -232,16 +232,16 @@
 
       <!-- Content -->
       <div class="flex-1 p-4 sm:p-6 lg:p-8 bg-gray-900 overflow-y-auto">
-        <div class="max-w-7xl mx-auto">
+        <div class="max-w-screen-2xl mx-auto">
           <!-- Stats Cards -->
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6 mb-8">
             <!-- Cash Balance -->
             <div id="cash-balance-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
               <div class="flex items-center gap-3 mb-3">
-                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="skeleton w-10 h-10 lg:w-8 lg:h-8 rounded-lg shrink-0"></div>
                 <div class="flex-1 space-y-2">
                   <div class="skeleton h-4 w-3/4"></div>
-                  <div class="skeleton h-6 w-1/2"></div>
+                  <div class="skeleton h-6 lg:h-5 w-1/2"></div>
                 </div>
               </div>
               <div class="skeleton h-3 w-full"></div>
@@ -249,10 +249,10 @@
             <!-- Crypto Value -->
             <div id="crypto-value-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
               <div class="flex items-center gap-3 mb-3">
-                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="skeleton w-10 h-10 lg:w-8 lg:h-8 rounded-lg shrink-0"></div>
                 <div class="flex-1 space-y-2">
                   <div class="skeleton h-4 w-3/4"></div>
-                  <div class="skeleton h-6 w-1/2"></div>
+                  <div class="skeleton h-6 lg:h-5 w-1/2"></div>
                 </div>
               </div>
               <div class="skeleton h-3 w-full"></div>
@@ -260,10 +260,10 @@
             <!-- Locked Savings -->
             <div id="locked-savings-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
               <div class="flex items-center gap-3 mb-3">
-                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="skeleton w-10 h-10 lg:w-8 lg:h-8 rounded-lg shrink-0"></div>
                 <div class="flex-1 space-y-2">
                   <div class="skeleton h-4 w-3/4"></div>
-                  <div class="skeleton h-6 w-1/2"></div>
+                  <div class="skeleton h-6 lg:h-5 w-1/2"></div>
                 </div>
               </div>
               <div class="skeleton h-3 w-full"></div>
@@ -271,10 +271,10 @@
             <!-- Total Balance -->
             <div id="total-balance-card" class="bg-gray-800 rounded-xl p-4 sm:p-6 shadow-sm">
               <div class="flex items-center gap-3 mb-3">
-                <div class="skeleton w-10 h-10 rounded-lg shrink-0"></div>
+                <div class="skeleton w-10 h-10 lg:w-8 lg:h-8 rounded-lg shrink-0"></div>
                 <div class="flex-1 space-y-2">
                   <div class="skeleton h-4 w-3/4"></div>
-                  <div class="skeleton h-6 w-1/2"></div>
+                  <div class="skeleton h-6 lg:h-5 w-1/2"></div>
                 </div>
               </div>
               <div class="skeleton h-3 w-full"></div>
