--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -207,7 +207,7 @@
 
             <div>
               <h1 class="text-xl sm:text-2xl font-bold text-white">Invest In</h1>
-              <p class="text-gray-400 mt-1 text-sm sm:text-base">Buy, sell, or swap your favorite cryptocurrencies.</p>
+              <p class="text-gray-400 mt-1 text-sm sm:text-base">Buy, sell your favorite cryptocurrencies.</p>
             </div>
           </div>
 
