--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -446,6 +446,10 @@
           </div>
         </div>
         
+        <div class="hidden text-right text-sm text-gray-400 mb-2">
+            <span id="modal-available-units"></span>
+        </div>
+
         <div class="flex justify-between items-center bg-gray-900 p-3 rounded-lg">
             <div>
                 <label class="block text-sm font-medium text-gray-400">Current Price</label>
@@ -473,13 +477,17 @@
             <label for="amount-input" class="block text-sm font-medium text-gray-400 mb-2">Amount (USD)</label>
             <div class="relative">
                 <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400">$</span>
-                <input type="text" id="amount-input" class="w-full border border-gray-600 bg-gray-900 text-white rounded-lg py-3 pl-7 pr-4 text-base focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="100.00">
+                <input type="text" id="amount-input" class="w-full border border-gray-600 bg-gray-900 text-white rounded-lg py-3 pl-7 pr-16 text-base focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="100.00">
+                <button type="button" id="max-amount-btn" class="absolute inset-y-0 right-0 hidden items-center pr-3 text-blue-400 hover:text-blue-300 font-medium text-sm">Max</button>
             </div>
           </div>
 
           <div id="units-input-container" class="hidden">
             <label for="units-input" class="block text-sm font-medium text-gray-400 mb-2">Units</label>
-            <input type="text" id="units-input" class="w-full border border-gray-600 bg-gray-900 text-white rounded-lg py-3 px-4 text-base focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter units">
+             <div class="relative">
+                <input type="text" id="units-input" class="w-full border border-gray-600 bg-gray-900 text-white rounded-lg py-3 px-4 pr-16 text-base focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter units">
+                <button type="button" id="max-units-btn" class="absolute inset-y-0 right-0 hidden items-center pr-3 text-blue-400 hover:text-blue-300 font-medium text-sm">Max</button>
+            </div>
           </div>
         </div>
         
