feat: initial commit

--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -344,7 +344,7 @@
                     <tr class="text-left text-xs uppercase text-gray-500 border-b border-gray-700">
                       <th class="px-3 py-3 font-semibold tracking-wider">Fund Name</th>
                       <th class="px-3 py-3 font-semibold tracking-wider">Units Held</th>
-                      <th class="px-3 py-3 font-semibold tracking-wider">Avg. Purchase Price</th>
+                      <th class="px-3 py-3 font-semibold tracking-wider">Current Price</th>
                       <th class="px-3 py-3 font-semibold tracking-wider">Total Investment</th>
                       <th class="px-3 py-3 font-semibold tracking-wider">Current Market Value</th>
                       <th class="px-3 py-3 font-semibold tracking-wider">Gain/Loss</th>
