feat: initial commit

--- a/deposit.html
+++ b/deposit.html
@@ -368,8 +368,8 @@
                 </div>
 
                 <div id="bank-contact-info" class="w-full bg-blue-900/30 border border-blue-800 rounded-md p-4 mb-6 hidden">
-                  <p class="text-sm text-blue-200 mb-2">Our team will contact you shortly to complete your bank transfer.</p>
-                  <a href="#" class="text-sm text-blue-400 flex items-center gap-1 hover:underline">
+                  <p class="text-sm text-blue-200 mb-2">Kindly contact us at deposit@capirocket.net to complete your bank transfer or click on the Contact Us link below.</p>
+                  <a href="mailto:deposit@capirocket.net" class="text-sm text-blue-400 flex items-center gap-1 hover:underline">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
                     Contact Us
                   </a>
